# multi_agent_architecture

./: README.md  pyproject.toml
data/: cv_test.docx  example_cv.txt  jobs.json
sample_data/: jobs.json
src/mlops_multiagent/: __init__.py  config.py  graph.py  main.py  models.py  state.py
src/mlops_multiagent/agents/: __init__.py  assessment.py  common.py  intake_profile.py  job_matcher.py  recommendation.py
src/mlops_multiagent/utils/: document_loader.py  security.py  text_processing.py
